--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "@react-three/drei": "^9.13.0",
     "@react-three/fiber": "^8.0.23",
     "@reduxjs/toolkit": "^1.8.2",
+    "apexcharts": "^3.35.3",
     "lodash-es": "^4.17.21",
     "react": "^18.0.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^18.0.0",
+    "react-redux": "^8.0.2",
     "react-use-gesture": "^9.1.3",
     "three": "^0.141.0"
   },
